--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Brotli==1.1.0
 click==8.1.7
 colorama==0.4.6
 dj-database-url==2.3.0
-Django==5.1.4
-django-cors-headers==4.6.0
+# Django==5.1.4
+# django-cors-headers==4.6.0
 djangorestframework==3.15.2
 gunicorn==23.0.0
 h11==0.14.0
@@ -15,4 +15,4 @@ sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2024.2
 uvicorn==0.32.1
-whitenoise==6.8.2
+# whitenoise==6.8.2
